no need of flex wrap for the footer as it causes alignment issues

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -3,7 +3,7 @@
   padding: 45px 55px;
   gap: 30px 116px;
 
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 
 
   justify-content: center;
